# term-lyrics

./: .gitignore  README.md  cache.py  main.py  pyproject.toml  setup.py
term_lyrics/: cache.py  display.py  lyrics.py  main.py  scraper.py
